ubah warna judul

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <main>
         <!-- Judul -->
-        <h1>Kabupaten Banyuwangi</h1>
+        <h1 style="color: brown;">Kabupaten Banyuwangi</h1>
         <!-- Sub-Judul -->
         <h3>Jawa Timur</h3>
         <hr>
